version 1.5.2 (not yet released)
================================
 * silently change calendar='gregorian' to 'standard' internally, 
   since 'gregorian' deprecated in CF v1.9 (issue #256).
   
version 1.5.1.1
===============
 * no code changes, just new binary wheels for python 3.10.

version 1.5.1 (release tag v1.5.1.rel)
======================================
 * added support for "common_year" and "common_years" units for "noleap" 
   and "365_day" calendars (issue #5, PR #246)
 * check consistency of year arg and has_year_zero kwarg in cftime.datetime
   (issue #248).  Also assume if has_year_zero not specified it should be True
   if year=0. Allow replace method to change has_year_zero. Issue UserWarning
   if year set to zero and calendar default is changed from False to True
   (so that user is aware the resulting instance will not be CF compliant).
 * '360_day' was missing from list of 'idealized' calendars.
 * fixed a bug that led to subclasses losing their type identity upon
   pickling (issue #251, PR #252).
 * Change default behavior of proleptic_gregorian to has_year_zero=T
   (to be consistent with ISO-8601 since CF does not specify the year zero convention
   for this calendar). Issue warning when trying to
   to create a cftime.datetime instance that is not allowed in CF (PR #238).


version 1.5.0 (release tag v1.5.0.rel)
======================================
 * clean-up deprecated calendar specific subclasses (PR #231).
 * added string formatting support to `cftime.datetime` objects
   (via `cftime.datetime.__format__`) PR #232.
 * add support for astronomical year numbering (including year zero) for
   real-world calendars using 'has_year_zero' cftime.datetime kwarg (PR #234).
   Default is False for 'real-world' calendars ('julian', 'gregorian'/'standard', 
   'proleptic_gregorian'). Ignored for idealized calendars like '360_day
   (they always have year zero).
 * add "change_calendar" cftime.datetime method to switch to another 